--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+
+    <audio src="audio/correct.mp3" id="correct"></audio>
 </head>
 
 
 
 <body>
-    <p id="total-marks"><span id="count">0</span> Marks</p>
+    <p id="total-marks"><span id="marks">0</span> Marks</p>
     <p id="details">Question Value: <span id="question-value">1</span></p>
     <p id="details">Marks Per Second: <span id="marks-per-second">0</span></p>
     <p id="question"> <span id="value1">3</span> <span id="arithmetic">+</span> <span id="value2">3</span></p>
