--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
 
 
 <body>
-    <p id="total-marks"><span id="marks">0</span> Marks</p>
-    <p id="details">Question Value: <span id="question-value">1</span></p>
-    <p id="details">Marks Per Second: <span id="marks-per-second">0</span></p>
-    <p id="question"> <span id="value1">3</span> <span id="arithmetic">+</span> <span id="value2">3</span></p>
-    <input type="text" id="answer" placeholder="=" autocomplete="off">
-    
+    <div id="game">
+        <p id="total-marks"><span id="marks">0</span> Marks</p>
+        <p id="details">Question Value: <span id="question-value">1</span></p>
+        <p id="details">Marks Per Second: <span id="marks-per-second">0</span></p>
+        <p id="question"> <span id="value1">3</span> <span id="arithmetic">+</span> <span id="value2">3</span></p>
+        <input type="text" id="answer" placeholder="=" autocomplete="off">
+    </div>
+
+    <div id="upgrades">
+        
+    </div>
 </body>
 
 
