💩 Tooltips for the upgrades (needs work)
Currently the tooltips appear relative to the y position of the mouse but it should be appearing at the y position of the top of the current upgrade that I'm hovering over.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <input type="text" id="answer" placeholder="=" autocomplete="off">
     </div>
 
-    <div id="upgrades">
-        
-    </div>
+    <div id="upgrades"></div>
+
+    <div id="tooltip" class="tooltip"></div>
 </body>
 
 
