--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Solv</title>   
     
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </head>
 
